# CG-TP

./: README.md
Guiao10/: main.cpp
Guiao10_2/: main.cpp
Guiao11/: main.cpp
Guiao12/: main.cpp
Guiao7/: main.cpp
Guiao8/: catmull-rom.cpp
Guiao9/: main.cpp
fase1/: CMakeLists.txt  main.cpp  sphere.3d
fase1/Generator/: vertice.cpp
fase1/Generator/Debug/: Generator.ilk
fase1/Generator/Generator/: Generator.vcxproj  Generator.vcxproj.filters  ListVertices.cpp  ListVertices.h  TesteList.cpp  box.3d  infoXML.xml  input.txt  main.cpp  sphere.3d  vertice.cpp  vertice.h
fase1/Generator/Generator/Debug/: vc142.idb
fase1/Generator/Generator/Debug/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  link.command.1.tlog
fase1/Generator/Generator/Release/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  Generator.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
fase1/Generator/Release/: Generator.iobj  Generator.ipdb
fase2/Engine/: CMakeLists.txt  ListGroups.cpp  ListGroups.h  SistemaSolar.xml  groupImpl.cpp  groupImpl.h  infoXML.xml  input.xml  jupiter.3d  jupiterLua1.3d  jupiterLua2.3d  jupiterLua3.3d  jupiterLua4.3d  main.cpp  marte.3d  marteLua1.3d  marteLua2.3d  mercurio.3d  neptuno.3d  neptunoLua.3d  saturno.3d  saturnoLua2.3d  saturnoLua3.3d  sol.3d  terra.3d  terraLua.3d  urano.3d  uranoLua1.3d  uranoLua2.3d  uranoLua3.3d  venus.3d
fase2/Generator/Debug/: cone.3d
fase2/Generator/Generator/: Generator.vcxproj  cone.3d  plane.3d
fase2/Generator/Generator/Debug/: vc142.idb
fase2/Generator/Generator/Debug/Generator.tlog/: CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  link.read.1.tlog  link.write.1.tlog
fase2/Generator/Generator/Release/Generator.tlog/: Generator.lastbuildstate  Generator.write.1u.tlog
fase3/Engine/: CMakeLists.txt  ListGroups.cpp  ListGroups.h  ListVertices.cpp  ListVertices.h  SistemaSolar.xml  SistemaSolar1.xml  SistemaSolar2.xml  groupImpl.cpp  groupImpl.h  jupiterLua1.3d  jupiterLua2.3d  main.cpp  marte.3d  marteLua2.3d  saturnoLua4.3d  sol.3d  terra.3d  venus.3d
fase3/Generator/: Generator.sln
fase3/Generator/Debug/: Generator.ilk
fase3/Generator/Generator/: anelSaturno.3d  box2.3d  main.cpp  sphere.3d
fase3/Generator/Generator/Debug/: vc142.idb
fase3/Generator/Generator/Debug/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
fase3/Generator/Generator/Release/Generator.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.write.1.tlog
fase4/Engine/: CMakeLists.txt  ListGroups.cpp  ListGroups.h  ListVertices.cpp  ListVertices.h  Model.cpp  Model.h  SistemaSolar.xml  SistemaSolar1.xml  groupImpl.cpp  groupImpl.h  inXML2.xml  jupiter.3d  jupiterLua3.3d  main.cpp  marte.3d  marteLua1.3d  neptuno.3d  neptunoLua.3d  saturno.3d  saturnoAnel.3d  saturnoLua5.3d  sol.3d  teapot.3D  terra.3d  terraLua.3d  urano.3d  uranoLua3.3d  venus.3d
fase4/Generator/Debug/: Generator.ilk
fase4/Generator/Generator/: cone.3d  main.cpp  sphere.3d  sphere1.3d  teapot.3D
fase4/Generator/Generator/Debug/: vc142.idb
fase4/Generator/Generator/Debug/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
fase4/Generator/Generator/Release/Generator.tlog/: link.command.1.tlog
fase4/Generator/Release/: Generator.ipdb
guiao5/: main.cpp
guiao6/: main.cpp
